shop의 세부목록 사이트 구현

--- a/django_proj1/shop/templates/shop/item_list.html
+++ b/django_proj1/shop/templates/shop/item_list.html
@@ -3,11 +3,15 @@
         {% for item in item_list %}
         <tr>
             <td>{{ item.id }}</td>
-            <td>{{ item.name }}</td>
+            <td>
+                <a href="/shop/{{ item.pk }}/">
+                    {{ item.name }}
+                </a>
+            </td>
             <td>{{ item.price }}</td>
             <td>
                 {% if item.photo %}
-                <img src="{{ item.photo.url }}" style="width: 100px; height:100px;" />
+                <img src="{{ item.photo.url }}" style="width: 100px; height: 100px;" />
                 {% endif %}
             </td>
         </tr>
