--- a/django_proj2/journal/templates/journal/journal_detail.html
+++ b/django_proj2/journal/templates/journal/journal_detail.html
@@ -1,3 +1,7 @@
+{% extends "journal/layout.html" %}
+
+{% block content %}
+
 <h2>{{ post.title }}</h2>
 
 {{ post.content }} <br>
@@ -33,3 +37,5 @@
     </li>
     {% endfor %}
 </ul>
+
+{% endblock %}
