--- a/django_proj2/journal/templates/journal/journal_list.html
+++ b/django_proj2/journal/templates/journal/journal_list.html
@@ -1,3 +1,7 @@
+{% extends "journal/layout.html" %}
+
+{% block content %}
+
 <table>
     <tbody>
         {% for post in journal_list %}
@@ -19,3 +23,5 @@
 
     </tbody>
 </table>
+
+{% endblock %}
