--- a/django_proj2/journal/templates/journal/journal_list.html
+++ b/django_proj2/journal/templates/journal/journal_list.html
@@ -1,27 +1,19 @@
-{% extends "journal/layout.html" %}
+{% extends 'journal/layout.html' %}
 
 {% block content %}
+    <ul>
+    {% for post in journal_list %}
+        <li>
+            <img src="{{ post.photo.url }}" style="width: 100px;" />
+            <a href="/journal/{{ post.pk }}/">
+                {{ post.title }}
+            </a>
+            {{ post.journalist.name }}
+        </li>
+    {% endfor %}
+    </ul>
+    <hr />
+    <a href="/journal/new/">Post New</a>
 
-<table>
-    <tbody>
-        {% for post in journal_list %}
-        <tr>
-            <td>
-                <a href="/journal/{{ post.pk }}/">{{ post.title }}</a>
-                <hr />
-            </td>
-            <td> {{ post.journalist }}</td>
-            {% if post.photo %}
-            <td> <img src="{{ post.photo.url }}" style="width: 100px; height: 100px;" /></td>
-            {% endif %}
-            <td> {{ post.content }} </td>
-            <td> {{ post.created_at }} </td>
-        </tr>
-
-
-        {% endfor %}
-
-    </tbody>
-</table>
 
 {% endblock %}
