배우 목록 버튼 구현

--- a/django_pro3/movie/templates/movie/actor_detail.html
+++ b/django_pro3/movie/templates/movie/actor_detail.html
@@ -15,16 +15,14 @@
 
 <hr />
 
-<a href="/movie/">영화 목록</a>
-
 <hr />
 
-<h3>Review<h3>
+<h3>필모그래피<h3>
 
 <ul>
     {% for movie in movie_list %}
     <li>
-        {{ movie.title }}
+        {{ movie.title }}<br>
         {{ movie.created_at }}
         {{ movie.updated_at }}
     </li>
