--- a/django_pro3/movie/templates/movie/movie_list.html
+++ b/django_pro3/movie/templates/movie/movie_list.html
@@ -10,14 +10,12 @@
                 {{ movie.title }}
             </a>
 
-            <a href="/movie/{{ actor.pk }}/">
             {{ movie.actor }}
-            </a>
             {{ movie.director }}
         </li>
     {% endfor %}
     </ul>
     <hr />
     <a href="/movie/new/">영화 등록</a>
-    <a href="/actor/new/">배우 등록</a>
+    <a href="/movie/actor/">배우 목록</a>
 {% endblock %}
