--- a/django_pro3/movie/templates/movie/actor_list.html
+++ b/django_pro3/movie/templates/movie/actor_list.html
@@ -14,6 +14,7 @@
 {% endfor %}
 </ul>
 
+<a href="/movie/">영화 목록</a>
 {% endblock %}
 
 {% comment %} actor_detail과 actor_new, actor_edit 버튼 추가하기 {% endcomment %}
