배우 등록 구현

--- a/django_pro3/movie/templates/movie/movie_detail.html
+++ b/django_pro3/movie/templates/movie/movie_detail.html
@@ -36,7 +36,7 @@
 <ul>
     {% for review in review_list %}
     <li>
-        <strong>{{ review.message }}</strong>
+        <strong>{{ review.message }}</strong><br>
         {{ review.created_at }}
         {{ review.updated_at }}
     </li>
