예고편 추가/수정/삭제 구현

--- a/django_pro3/movie/templates/movie/actor_detail.html
+++ b/django_pro3/movie/templates/movie/actor_detail.html
@@ -8,7 +8,7 @@
 
 <hr />
 
-<img src="{{ actor.photo.url }}" style="width=100px;", "height=100px;" />
+<img src="{{ actor.photo.url }}" style="width: 300px;" />
 
 <hr/>
 
