디버그 툴바 구현,어카운트 앱 생성

--- a/django_pro3/movie/templates/movie/movie_detail.html
+++ b/django_pro3/movie/templates/movie/movie_detail.html
@@ -29,8 +29,42 @@
 
 
 <hr />
+<h3>Reviews</h3>
+<ul>
+    {% for review in movie.review_set.all %}
+    <li>
+        {{ review.message }}
+        {% comment %} <a href="/movist/movies/{{ movie.pk }}/reviews/{{ review.pk }}/edit/">Edit</a>
+        <a href="/movist/movies/{{ movie.pk }}/reviews/{{ review.pk }}/delete/">Delete</a> {% endcomment %}
+    </li>
+    {% empty %}
+    <li>등록된 리뷰가 없습니다. 첫번째 리뷰를 작성해주세요.</li>
+    {% endfor %}
+</ul>
 
-<h3>Review</h3>
+<script>
+    function init() {
+        console.log("페이지 초기화 완료");
+
+        // js로 리뷰 목록을 가져와서
+        // 웹페이지에 뿌려주겠다.
+
+        // var a = 1; // var 라고 쓰는 것은 옛 시대의 유물.
+        // 이제는 const와 let을 씁니다.
+
+        const review_list_url = "/movie/movie/1/reviews/";
+
+        // 지정 주소로 GET 요청을 해서 응답을 받겠다.
+        jQuery.get(review_list_url).done((response) => {
+            console.log("response :", response);
+        }); // 아주 옛스런 방법, or fetch, axios
+    }
+    jQuery(init);
+    // $(init);
+</script>
+
+
+{% comment %} <h3>Review</h3>
 <a href="/movie/{{ movie.pk }}/review/new/">리뷰쓰기</a>
 <hr />
 <ul>
@@ -45,7 +79,7 @@
     
     {% endfor %}
 </ul>
-<hr />
+<hr /> {% endcomment %}
 
 
 <h3>예고편</h3>
@@ -59,6 +93,8 @@
 <br>
 <br>
 {% endfor %}
+
+
 
 </ul>
 {% endblock %}
