--- a/django_pro3/movie/templates/movie/movie_detail.html
+++ b/django_pro3/movie/templates/movie/movie_detail.html
@@ -52,19 +52,38 @@
         // var a = 1; // var 라고 쓰는 것은 옛 시대의 유물.
         // 이제는 const와 let을 씁니다.
 
-        const review_list_url = "/movie/movie/1/reviews/";
+        const review_list_url = '{% url "review_list" movie.pk %}';
+        // const review_list_url = "/movist/movies/{{ movie.pk }}/reviews/";
 
         // 지정 주소로 GET 요청을 해서 응답을 받겠다.
-        jQuery.get(review_list_url).done((response) => {
-            console.log("response :", response);
-        }); // 아주 옛스런 방법, or fetch, axios
+        jQuery.get(review_list_url)
+            .done((response) => {
+                const review_list = response;
+                let html = '';
+                for (const review of review_list) {
+                    html += `
+                        <li>
+                            ${review.message}
+                            by ${review.author.username}
+                            <a href="${review.edit_url}">Edit</a>
+                            <a href="${review.delete_url}">Delete</a>
+                        </li>
+                    `;
+                }
+                document.getElementById("review-list").innerHTML = '<ul>' + html + '</ul>';
+            })
+            .fail(() => {
+                console.error("failed to load");
+            })
+            .always(() => {}); // 아주 옛스런 방법, or fetch, axios
     }
     jQuery(init);
     // $(init);
 </script>
 
 
-{% comment %} <h3>Review</h3>
+
+<h3>Review</h3>
 <a href="/movie/{{ movie.pk }}/review/new/">리뷰쓰기</a>
 <hr />
 <ul>
@@ -79,7 +98,7 @@
     
     {% endfor %}
 </ul>
-<hr /> {% endcomment %}
+<hr />
 
 
 <h3>예고편</h3>
@@ -94,7 +113,8 @@
 <br>
 {% endfor %}
 
-
-
 </ul>
+
+<a href="{% url "review_new" movie.pk %}">리뷰쓰기</a>
+
 {% endblock %}
