--- a/django_pro3/django_pro3/templates/base.html
+++ b/django_pro3/django_pro3/templates/base.html
@@ -9,6 +9,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <style>
+    .page-title a{
+        text-decoration: none;
+        color: #ff4552;
+    }<!--이걸 쓰면 타이틀 링크의 밑줄이 사라진다-->
         #top-nav {
             display: flex;
         }
@@ -20,12 +24,15 @@
     </style>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="{% static "base.css" %} />"
+    <link rel="stylesheet" href="{% static "base.css" %} />"
     
     <script src="{% static "base.js" %}"></script>
 </head>
 
 <body>
+<h1 class="page-title">
+    <a href="{% url "root" %}"> Movie </a>
+</h1>
 
 <ul id="top-nav">
     {% if not user.is_authenticated %}
