리뷰 폼에 부트스트랩 코드를 추가했다

--- a/django_pro3/django_pro3/templates/base.html
+++ b/django_pro3/django_pro3/templates/base.html
@@ -5,6 +5,11 @@
 <head>
     <title>MOVIE</title>
     <meta charset="utf-8">
+
+    <!--css 를 js보다 먼저 위치-->
+    <link rel="stylesheet" href="{% static "bootstrap-5.1.0-dist/css/bootstrap.min.css" %}" />
+    <script rel="{% static "bootstrap-5.1.0-dist/js/bootstrap.min.js" %}"></script>
+
     <!-- 출처: https://getbootstrap.com/docs/5.0/getting-started/introduction/ -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
