--- a/django_pro3/django_pro3/templates/base.html
+++ b/django_pro3/django_pro3/templates/base.html
@@ -35,6 +35,7 @@
 </head>
 
 <body>
+<div class="container">
 <h1 class="page-title">
     <a href="{% url "root" %}"> Movie </a>
 </h1>
@@ -53,8 +54,10 @@
 </ul>
     <div class="container">
     {% block content %}{% endblock %}
+</div>
     <hr />
     &copy; 2021.08.11 proj_movie Minkyo_Kim
+
 </body>
 
 </html>
