book m2m 해결/movie css추가

--- a/django_personal_proj/book/templates/book/book_list.html
+++ b/django_personal_proj/book/templates/book/book_list.html
@@ -4,7 +4,7 @@
     <img src="{{ book.cover_img.url }}" style="width: 100px" />
 
     {{ book.title }}
-    {{ book.writer }}
+    {{ book.writer.all }}
     {{ book.publisher }}
     {{ book.tag }}
 </li>
