--- a/django_pro3/movie/templates/movie/review_form.html
+++ b/django_pro3/movie/templates/movie/review_form.html
@@ -3,13 +3,15 @@
 
 {% block content %}
 
-<form action="" method="POST" enctype="multipart/form-data">
+<form action="" method="POST" enctype="multipart/form-data" novalidate>
 {% csrf_token %}
 {% comment %} <table>
 {{ form }}
 </table> {% endcomment %}
 {% bootstrap_form form %}
 <input type="submit" class="btn btn-primary" />
+<input type="submit" class="btn btn-secondary" />
+<input type="submit" class="btn btn-danger" />
 </form>
 
 {% endblock %}
